# airlux

./: README.md  docker-compose.yaml
NAT/esp32-devices/simulate/: index.js  package.json
NAT/esp32-devices/simulation/: .env.example
NAT/raspberry-pi/: docker-compose.yaml
NAT/raspberry-pi/MQTT-broker/mosquitto/config/: mosquitto.conf
NAT/raspberry-pi/home-assistant/: .gitignore  configuration.yaml
NAT/raspberry-pi/manager/: main.py  requirements.txt
NAT/raspberry-pi/manager-api/: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  VersionInfo.h
NAT/raspberry-pi/manager-api/src/: main.cpp
NAT/raspberry-pi/script-launcher/: ssh_tunnel.bash  ssh_tunnel.service  start.bash  start.docker.bash
NAT/raspberry-py/: docker-compose.yaml
NAT/raspberry-py/MQTT-broker/: Dockerfile
NAT/raspberry-py/MQTT-broker/mosquitto/config/: mosquitto.conf
public-server/: .gitignore  docker-compose.yaml  la_sainte_commande.txt
public-server/.ssh/: authorized_keys  id_rsa
public-server/airnet-api/: .gitignore  Dockerfile  pyvenv.cfg  requirements.txt
public-server/airnet-api/app/: dynamic.yml  main.py  rsa_key.pub
public-server/airnet-private-server/: main.py
public-server/mysql-db/: mysql-db.lo1  mysql-db.loo  mysql-db.sql
public-server/reverse-proxy/: dynamic.yml  traefik.yml
public-server/ssh_host_keys/: ssh_host_key.pub
